--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-three/postprocessing": "^3.0.4",
     "@tailwindcss/vite": "^4.1.7",
     "gsap": "^3.13.0",
+    "lucide-react": "^0.513.0",
     "react": "^19.1.0",
     "react-countup": "^6.5.3",
     "react-dom": "^19.1.0",
